# interfacing_fortran_from_python

./: .gitignore  LICENSE  README.md
elaborate_example/: CMakeLists.txt  test.py
elaborate_example/app/: CMakeLists.txt  main.f90
elaborate_example/cmake/export/: pygravmod3d-config.cmake.in
elaborate_example/data/gmt_scripts/: contour.sh  mola.cpt
elaborate_example/src/: gr3dmod.f90  grav_kinds.f90
elaborate_example/test/: test_gr3dprm.f90
elaborated_example/: a.out  c_funcpdf.h  c_funcpdf.pyx  cffi_funcpdf.py  config.cmake  ctypes_funcpdf.py  cython_funcpdf.py  exe  fileio.py  setup.py  test.py  test_dfloat.f90
elaborated_example/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
elaborated_example/_build/Testing/Temporary/: CTestCostData.txt
elaborated_example/_build/app/: Makefile  app  app-openmp  cmake_install.cmake
elaborated_example/_build/cmake/: pygravmod3d-config-version.cmake  pygravmod3d-config.cmake
elaborated_example/_build/src/: Makefile  cmake_install.cmake  libpygravmod3d-openmp.dylib  libpygravmod3d.dylib
elaborated_example/_build/src/fmod/: grav3d_module.mod
elaborated_example/_build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_gr3dprm
elaborated_example/app/: main.f90
elaborated_example/data/gmt_scripts/: annots.txt  plot_3d.sh
elaborated_example/src/: CMakeLists.txt  gr3dmod.f90
elaborated_example/test/: CMakeLists.txt  test_gr3dprm.f90
plain_example/: cffi_plain.py  ctypes_plain.py  cython_plain.py  main.f90  mod_sum.f90  mod_sum.pyx  mod_sum_c.f90  setup.py  sum_columns_dyn.c  sum_columns_dyn.cc  sum_columns_sta.c  sum_columns_sta.cc
